--- a/src/components/slider/styles.css
+++ b/src/components/slider/styles.css
@@ -1,24 +1,22 @@
 #app {
-    height: 100%;
-  }
-  html,
-  body {
-    position: relative;
-    height: 100%;
-  }
-  
+  height: 100%;
+}
+html,
 body {
-  background: #eee;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
-  font-size: 14px;
-  color: #000;
+  position: relative;
+  height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
+  background: #eee;
+  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  color: #000;
+  font-size: 14px;
 }
 
 .swiper {
   width: 100%;
-  height: 100%;
+  height: auto;
   cursor: pointer;
 }
 
@@ -27,22 +25,27 @@ body {
   font-size: 18px;
   background: #fff;
   border-radius: 8px;
-
-  /* Center slide text vertically */
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
+  height: auto;
 }
 
 .swiper-slide img {
   display: block;
   width: 100%;
-  height: 210px;
+  height: auto;
+  aspect-ratio: 17 / 10;
   object-fit: cover;
 }
-.description-product {
-  margin: 0px 4px;
+
+.name-product {
+  margin: 10px 10px;
 }
-.swiper-pagination {
-  margin-top: 20px;
+
+.valor-product {
+  font-size: 16px;
+  margin-top: 10px;
+  margin-bottom: 30px;
 }
