--- a/src/components/carrito/carrito.css
+++ b/src/components/carrito/carrito.css
@@ -9,6 +9,7 @@
 
 .button-carrito {
     background-color: #FFCF57;
+    border: none;
     border-radius: 100%;
     width: 60px;
     height: 60px;
