--- a/src/hooks/cards/card.css
+++ b/src/hooks/cards/card.css
@@ -13,7 +13,7 @@
 .error {
     margin: 5%;
     font-size: 1.25rem; /* Ajusta el tamaño de la fuente de manera relativa */
-    color: red;
+    color: green;
 }
 
 @media (min-width: 2000px) {
