--- a/src/components/product_modal/productModal.css
+++ b/src/components/product_modal/productModal.css
@@ -2,31 +2,89 @@
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
-    /* background-color: rgba(0, 0, 0, 0.5); */
+    z-index: 1000; 
     display: flex;
+    background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
   }
   
   .modal-content {
+    position: relative;
+    display: flex;       /* Alinear los elementos internos */
+    flex-direction: column; /* elementos por columnas */
     background: #fff;
+    height: 80%;
+    width: 60%;
     padding: 20px;
     border-radius: 10px;
     text-align: center;
-    width: 400px;
+    overflow-y: auto;
   }
 
+  .modal-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    border-bottom: 1px solid #ccc;
+  }
+
+  .close-button {
+    background: transparent;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+  }
+
+  .modal-body {
+    display: flex;
+    justify-content: space-between;
+  }
+  
   .product-image {
     width: 100%;
     height: 200px;
+    margin: 50px 30px 0 100px;
     object-fit: cover;
     border-radius: 10px;
   }
 
-  .close-button {
-    position: absolute;
-    top: 50%;
+  .quantity {
+    display: flex; /* Alinear botones */
+    margin-top: auto; /* Alinear al final */
+    align-items: center;
+    border-top: 1px solid #ccc;
+    gap: 10px; /* Espacio entre elementos */
+    justify-content: end;
+    padding: 20px;
+  }
+
+  .add-product, .pay-product {
+    border: #ccc 1px solid;
+    border-radius: 4%;
+    padding: 12px;
+    font-size: 16px;
+    border: none;
+  }
+
+  .quantity-buttons {
+    display: flex;
+    gap: 50px;
+    align-items: center;
+    border: #ccc 1px solid;
+    border-radius: 4%;
+    padding: 5px;
+  }
+
+  .quantity-buttons > button {
+    background: none;
+    border: none;
+    font-size: 24px;
+    margin: 0px 10px 0px 10px;
     cursor: pointer;
   }
+
+
